welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: illegal start of simple expression
if (estFaceMur);
               ^Program:5: error: ';' expected but 'else' found.
	else
        ^